--- a/index.html
+++ b/index.html
@@ -78,22 +78,13 @@
             <h2 class="section-title">大切な思い出</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <div class="photo-placeholder">
-                        <span>📷</span>
-                        <p>写真1</p>
-                    </div>
+                    <img src="images/IMG_4192.JPG" alt="二人の思い出">
                 </div>
                 <div class="gallery-item">
-                    <div class="photo-placeholder">
-                        <span>📷</span>
-                        <p>写真2</p>
-                    </div>
+                    <img src="images/photo2.jpg" alt="二人の思い出">
                 </div>
                 <div class="gallery-item">
-                    <div class="photo-placeholder">
-                        <span>📷</span>
-                        <p>写真3</p>
-                    </div>
+                    <img src="images/photo3.jpg" alt="二人の思い出">
                 </div>
                 <div class="gallery-item">
                     <div class="photo-placeholder">
@@ -143,24 +134,23 @@
                         <span class="icon">💑</span>
                     </div>
                     <h3>出会った日</h3>
-                    <p class="date">○○○○年○月○日</p>
+                    <p class="date">2014年7月</p>
                 </div>
                 <div class="anniversary-item">
                     <div class="date-circle">
                         <span class="icon">💍</span>
                     </div>
                     <h3>記念日</h3>
-                    <p class="date">○○○○年○月○日</p>
+                    <p class="date">2015年2月22日</p>
                 </div>
                 <div class="anniversary-item">
                     <div class="date-circle">
                         <span class="icon">🎂</span>
                     </div>
                     <h3>こなみの誕生日</h3>
-                    <p class="date">○月○日</p>
+                    <p class="date">6月25日</p>
                 </div>
             </div>
-            <p class="anniversary-note">※ 日付を編集してください</p>
         </div>
     </section>
 
