--- a/index.html
+++ b/index.html
@@ -87,25 +87,30 @@
                     <img src="images/photo3.jpg" alt="二人の思い出">
                 </div>
                 <div class="gallery-item">
-                    <div class="photo-placeholder">
-                        <span>📷</span>
-                        <p>写真4</p>
-                    </div>
+                    <img src="images/photo4.jpg" alt="二人の思い出">
                 </div>
                 <div class="gallery-item">
-                    <div class="photo-placeholder">
-                        <span>📷</span>
-                        <p>写真5</p>
-                    </div>
+                    <img src="images/photo5.jpg" alt="二人の思い出">
                 </div>
                 <div class="gallery-item">
-                    <div class="photo-placeholder">
-                        <span>📷</span>
-                        <p>写真6</p>
-                    </div>
+                    <img src="images/photo6.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo7.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo8.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo9.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo10.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo11.jpg" alt="二人の思い出">
                 </div>
             </div>
-            <p class="gallery-note">※ お好きな写真を追加できます</p>
         </div>
     </section>
 
