Add new photos (photo12-17) and update index.html

--- a/index.html
+++ b/index.html
@@ -110,6 +110,24 @@
                 <div class="gallery-item">
                     <img src="images/photo11.jpg" alt="二人の思い出">
                 </div>
+                <div class="gallery-item">
+                    <img src="images/photo12.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo13.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo14.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo15.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo16.jpg" alt="二人の思い出">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/photo17.jpg" alt="二人の思い出">
+                </div>
             </div>
         </div>
     </section>
