Fix: 画像ファイル拡張子を小文字に統一 (IMG_4192.JPG → IMG_4192.jpg)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2 class="section-title">大切な思い出</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="images/IMG_4192.JPG" alt="二人の思い出">
+                    <img src="images/IMG_4192.jpg" alt="二人の思い出">
                 </div>
                 <div class="gallery-item">
                     <img src="images/photo2.jpg" alt="二人の思い出">
