Update: ゲームリンクをGitHub PagesのURLに変更

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="game-card">
                 <h3>konamiインベーダーゲーム</h3>
                 <p class="game-subtitle">～襲い掛かる女狐たちを撃退せよ！～</p>
-                <a href="https://github.com/m990037/minesweeper" target="_blank" class="game-link">
+                <a href="https://m990037.github.io/minesweeper/" target="_blank" class="game-link">
                     ゲームをプレイする 🎮
                 </a>
             </div>
